# PQC-Universal-Backend

./: .gitattributes  .gitignore  Dockerfile.server  Makefile  NOTICE  README.md  openssl.cnf  setup.sh  verify_dashboard.py
.github/workflows/: ci.yml
client/: pyproject.toml
client/proto/: health.proto  pqc.proto
client/src/pqc_client/: channel.py  cli.py  health_pb2.py  health_pb2_grpc.py  pqc_pb2.py  pqc_pb2_grpc.py
cpp_server/: CMakeLists.txt  config.cpp  config.hpp  db_manager.cpp  db_manager.hpp  http_gateway.cpp  http_gateway.hpp  logger.cpp  logger.hpp  main.cpp  s3_client.cpp  s3_client.hpp  secure_storage.cpp  secure_storage.hpp
proto/: health.proto  pqc.proto
scripts/: generate_certs.sh  run_client.sh  test_integration.sh
www/: index.html
